style: add color variables and styled first section

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ body{
         border-radius: 3.2rem 0 0 3.2rem;
         border-radius: 3.2rem;
     }
-    .resultado 4 {
+    .resultado  {
      @@ -189,10 +189,24 @@ body}
     .resumo{
         padding: 3.8rem 4rem;
