--- a/style.css
+++ b/style.css
@@ -132,4 +132,20 @@ resumo {
         border-radius: 3.2rem 0 0 3.2rem;
         border-radius: 3.2rem;
     }
-}
+    .resultado 4 {
+        @@ -189,10 +189,24 @@ body}
+        
+            .resumo{
+                padding: 3.8rem 4rem;
+                border-radius: 3.2rem;
+            }
+        
+            .resumo h2{
+                font-size: 2.4rem;
+                margin-bottom: 3rem;
+            }
+        
+            .resumo div{
+                font-size: 1.8rem;
+            }    
+        }    
