--- a/style.css
+++ b/style.css
@@ -1,77 +1,91 @@
-* {
-    margin: 0;
+*{
+    margin:0; 
     padding: 0;
     box-sizing: border-box;
-    font-family: "inter", sans-serif;
+    font-family: "Inter", sans-serif;
 }
-:root{
-    font-size: 62.5%;
-    --resultado-bg: linear-gradient(180deg, #75f 0%, #6943ff 0.01%, #2f2ce9 100%);
-    --media-bg: linear-gradient(180deg, #4d21c9 0%, rgba(37, 33, 201, 0.00) 100%, rgba(37, 33, 201, 0.00) 100%);
-    --white: #fff;
-    --light-blue: #cac9ff;
-    --dark-navy: #303b59;
-    --resumo-div-bg: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.95) 100%);
-    --reacao-bg: #ff5555;
-    --memoria-bg: #ffb21e;
-    --verbal-bg: #00bb8f;
-    --visual-bg: #1125d6;
-    --very-light-blue: #ecf2ff
+
+:root {
+font-size: 62.5%;
+--resultado-bg: linear-gradient(180deg, #75f 0%,#6943ff 0.01%, #2f2ce9 100% ); 
+--media-bg:linear-gradient(180deg,#4d21c9 0%, rgba(37,36,201, 0.00) 100%, rgba(37,36,201, 0.00) 100% );
+--white: #fff;
+--light-blue: #cac9ff;
+--dark-navy:#303b59; 
+
+--resumo-div-bg: linear-gradient(0deg, rgba(255,255,255,0.95) 0%, rgba(255,255,255,0.95) 100%) ; 
+
+--reacao-bg:#ff5555;
+--memoria-bg:#ffb21e;
+--verbal-bg:#00bb8f;
+--visual-bg:#1125d6;
+--very-light-blue:#ECF2FF;
 }
-body{
+
+body {
     font-size: 1.6rem;
     background: var(--very-light-blue);
 }
-.resultado{
-    padding-block: 2.4rem;
-    background: var(--resultado-bg);
-    text-align: center;
-    color: var(--white);
-    border-radius: 0 0 3.2rem 3.2rem;
+
+.resultado {
+ padding-inline-end: 2.5rem;
+ background: var(--resultado-bg);
+ text-align: center;
+ color: var(--white);
+ border-radius: 0 0 3.2rem 3.2rem;
 }
-.resultado h1{
+
+.resultado h1 {
     font-size: 1.8rem;
     color: var(--light-blue);
     margin-bottom: 2.5rem;
 }
+
 .resultado div {
     width: 14rem;
     height: 14rem;
     background: var(--media-bg);
-    margin-inline: auto ;
+    margin-inline: auto;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-bottom: 2.4rem;
 }
+
 .resultado div strong:nth-of-type(1){
     font-size: 5.6rem;
     font-weight: 800;
     line-height: 7.2rem;
 }
-.resultado div strong:nth-of-type(2){
+
+.resultado div strong:nth-of-type(2) {
     color: var(--light-blue);
 }
-.resultado h2{
+
+.resultado h2 {
     font-size: 2.4rem;
     margin-bottom: 1rem;
 }
-.resultado p {
+
+.resultado p{
     max-width: 26rem;
     margin-inline: auto;
     color: var(--light-blue);
 }
-resumo {
+
+.resumo {
     padding: 2.4rem 3.2rem;
     background: var(--white);
 }
-.resumo h2{
+
+.resumo h2 {
     color: var(--dark-navy);
-    font-size: 1.8rem;
+    font-size: 1.8;
     margin-bottom: 2.5rem;
 }
-.resumo > div{
+
+.resumo > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -79,34 +93,43 @@ resumo {
     border-radius: 1.2rem;
     margin-bottom: 1.6rem;
 }
-.resumo > div div{
+
+.resumo > div div {
     display: flex;
     align-items: center;
     gap: 1.2rem;
 }
-.resumo > div strong{
+
+.resumo > div strong {
     color: var(--dark-navy);
 }
-.resumo > div strong span{
-    opacity: 0.5;
+
+.resumo > div strong span {opacity: 0.5; 
 }
-.resumo_reacoo{
-    background: var(--reacao-bg) var(--resumo-div-bg);
+
+.resumo_reacao {
+
+    background: var(--reacao-bg) var(--resumo-div-bg); 
     color: var(--reacao-bg);
 }
-.resumo_memoria{
+
+.resumo_memoria {
     background: var(--memoria-bg) var(--resumo-div-bg);
     color: var(--memoria-bg);
 }
+
 .resumo_verbal{
     background: var(--verbal-bg) var(--resumo-div-bg);
     color: var(--verbal-bg);
 }
-.resumo_visual{
-    background: var(--visual-bg) var(--resumo-div-bg);
+
+.resumo_visual {
+    background: var(--visual-bg) var(--resumo-div-bg); 
     color: var(--visual-bg);
-}
-.resumo button{
+} 
+
+.resumo button {
+
     margin-top: 0.8rem;
     width: 100%;
     border: none;
@@ -117,40 +140,78 @@ resumo {
     font-size: 1.8rem;
     font-weight: 700;
 }
-@media (min-width: 736px) {
+
+@media(min-width: 736px){
     body{
-        min-height: 100svh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+min-height: 100svh;
+display: flex;
+justify-content: center;
+ align-items: center;
     }
+    
     main{
         display: grid;
         grid-template-columns: 1fr 1fr;
         width: 736px;
         background: var(--white);
-        border-radius: 3.2rem 0 0 3.2rem;
         border-radius: 3.2rem;
     }
-    .resultado 4 {
-        @@ -189,10 +189,24 @@ body}
-            .resumo{
-                padding: 3.8rem 4rem;
-                border-radius: 3.2rem;
-            }
-            .resumo h2{
-                font-size: 2.4rem;
-                margin-bottom: 3rem;
-            }
-            .resumo div{
-                font-size: 1.8rem;
-            }    
-        }    
-        .resumo button{
-            margin-top: 2.4rem;
-        }
-        .resumo button:hover{
-            background: var(--resultado-bg);
-            cursor: pointer;
-        }
+.resultado {
+padding-block: 3.8rem;
+border-radius: 3.2rem;
+}
+     
+    .resultado h1{
+        font-size: 2.4rem;
+        margin-bottom: 3.6rem;
     }
+
+    .resultado div{
+        width: 20rem;
+        height: 20rem;
+        margin-bottom: 2.8rem;
+    }
+   
+    .resultado div strong:nth-of-type(1){
+        font-size: 7.2rem;
+    }
+
+    .resultado div strong:nth-of-type(2){
+        
+        font-size : 1.8rem; 
+    }
+
+    .resultado h2 {
+        font-size: 3.2rem;
+        margin-bottom: 1.6rem;
+    }
+
+    .resultado p{
+        font-size: 1.8rem;
+    }
+
+    .resumo {
+        padding: 3.8rem 4rem;
+        border-radius: 3.2rem;
+    }
+
+    .resumo h2 {
+        font-size: 2.4rem;
+        margin-bottom: 3rem;
+    }
+
+    .resumo div {
+        font-size: 1.8rem;
+    }
+
+    .resumo button {
+margin-top: 2.4rem;
+ 
+    }
+
+    .resumo button:hover{
+
+        background: var(--resultado-bg);
+        cursor: pointer;
+    }
+}
